--- a/client/styles/Toolbar.scss
+++ b/client/styles/Toolbar.scss
@@ -1,11 +1,31 @@
 #toolbar {
   position: sticky !important;;
+  width: 100%;
   display: flex;
   flex-direction: row;
+  gap: 10px;
+  .toolbar-item {
+    button {
+      font-size: 12px;
+      padding: 0px 8px;
+      height: 28px;
+      border: none;
+      background: #FAFAFA;
+      border-radius: 4px;
+      box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.1);
+      cursor: pointer;
+      &:hover {
+        font-size: calc(1.025 * 12)px;
+        scale: 1.025;
+        box-shadow: 0px 0px 4px 3px rgba(0, 0, 0, 0.1);
+      }
+      transition: font-size 0.2s, scale 0.2s, box-shadow 0.2s;
+    };
+  }
+  #fetch-page-button {
+    // justify-self: end;
+    justify-self: flex-end;;
+    background-color: red;
+  }
 }
 
-.toolbar-item button {
-  border: none;
-  background: none;
-  cursor: pointer;
-}
