--- a/client/styles/EditorContainer.scss
+++ b/client/styles/EditorContainer.scss
@@ -1,14 +1,11 @@
 #react-editor-container {
-  * {
-    font-size: 1.25vw;
-  }
   display: flex;
   flex-direction: row;
   width: 100%;
   gap: 2vw;
   div {
     flex: 1;
-    height: fit-content
+    height: fit-content;
   }
   div#arrow {
     flex: 0;
@@ -17,13 +14,16 @@
   }
 }
 
-#editor-text, #preview-text {
+#editor-text,
+#preview-text {
+  font-size: 1.1vw;
   width: 100%;
   height: 2000px;
   border: none;
   resize: none;
   overflow: hidden;
-  :focus, :active {
+  :focus,
+  :active {
     box-shadow: none;
     -moz-box-shadow: none;
     outline: none;
