--- a/client/styles/EditorContainer.scss
+++ b/client/styles/EditorContainer.scss
@@ -16,7 +16,7 @@
 
 #editor-text,
 #preview-text {
-  font-size: 1.1vw;
+  font-size: max(12px, 1.1vw);
   width: 100%;
   height: 2000px;
   border: none;
