--- a/client/styles/EditorContainer.scss
+++ b/client/styles/EditorContainer.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 #react-editor-container {
   display: flex;
   flex-direction: row;
@@ -14,20 +16,26 @@
   }
 }
 
+#editor-text {
+  font-family: "Source Code Pro", monospace;
+}
+
+#preview-text {
+  font-family: Verdana, sans-serif;
+  line-height: 140%;
+}
+
 #editor-text,
 #preview-text {
   font-size: max(12px, 1.1vw);
   width: 100%;
-  height: 2000px;
+  height: 1500px;
   border: none;
   resize: none;
   overflow: hidden;
-  :focus,
-  :active {
-    box-shadow: none;
-    -moz-box-shadow: none;
+  &:focus,
+  &:active {
     outline: none;
     border: none;
-    background-color: gray;
   }
 }
