--- a/client/styles/EditorContainer.scss
+++ b/client/styles/EditorContainer.scss
@@ -1,10 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
+body {
+  background-color: #fafafa;
+}
+
 #react-editor-container {
   display: flex;
   flex-direction: row;
   width: 100%;
   gap: 2vw;
+  align-items: top;
   div {
     flex: 1;
     height: fit-content;
@@ -29,7 +34,7 @@
 #preview-text {
   font-size: max(12px, 1.1vw);
   width: 100%;
-  height: 1500px;
+  height: auto;
   border: none;
   resize: none;
   overflow: hidden;
