--- a/client/styles/Toolbar.scss
+++ b/client/styles/Toolbar.scss
@@ -16,17 +16,16 @@
       box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.1);
       cursor: pointer;
       &:hover {
-        font-size: calc(1.025 * 12)px;
         scale: 1.025;
         box-shadow: 0px 0px 4px 3px rgba(0, 0, 0, 0.1);
       }
-      transition: font-size 0.2s, scale 0.2s, box-shadow 0.2s;
+      &:active {
+        scale: 0.92;
+      }
+      transition: scale 0.2s, box-shadow 0.2s;
     };
   }
   #fetch-page-button {
-    // justify-self: end;
-    justify-self: flex-end;;
-    background-color: red;
   }
 }
 
