--- a/client/styles/App.scss
+++ b/client/styles/App.scss
@@ -1,11 +1,20 @@
+body {
+  background-color: #fafafa;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+
 #header-components {
   position: sticky !important;
   top: 0;
+  left: 0;
   margin-top: -40px;
   margin-bottom: 60px;
-  left: 0;
-  margin-left: -8px;
-  padding: 4 12 12 12;
+  margin-left: -16px;
+  padding: 4px 12px 12px 12px;
   background-color: white;
   width: 100%;
   box-shadow: 0px 0px 16px 4px rgba(0,0,0,0.1);
