--- a/client/styles/EditorContainer.scss
+++ b/client/styles/EditorContainer.scss
@@ -1,13 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-body {
-  background-color: #fafafa;
-}
-
 #react-editor-container {
+  max-width: 100%;
   display: flex;
-  flex-direction: row;
-  width: 100%;
+  align-self: center;
+  margin: auto;
+  width: calc(100% - 40px);
   gap: 2vw;
   align-items: top;
   div {
@@ -32,8 +30,8 @@ body {
 
 #editor-text,
 #preview-text {
-  font-size: max(12px, 1.1vw);
   width: 100%;
+  font-size: min(18px, max(14px, 0.75vw));
   height: auto;
   border: none;
   resize: none;
