--- a/client/styles/Preview.scss
+++ b/client/styles/Preview.scss
@@ -2,6 +2,7 @@
   background: white;
   padding: 20px;
   min-height: 260px;
+  min-width: 200px;
   box-shadow: 0 0 6px 6px rgba(0,0,0,0.025);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
       Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
