--- a/client/styles/EditorContainer.scss
+++ b/client/styles/EditorContainer.scss
@@ -8,7 +8,7 @@
   width: calc(100% - 40px);
   gap: 1.25vw;
   align-items: top;
-  div {
+  #editor, #preview {
     flex: 1;
     height: fit-content;
   }
