--- a/client/styles/Toolbar.scss
+++ b/client/styles/Toolbar.scss
@@ -27,5 +27,11 @@
   }
   #fetch-page-button {
   }
+
+  #github-login button {
+    background-color: darken(purple, 5%);
+    color: white;
+    // font-weight: 500;
+  }
 }
 
